# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.34.0
	Martin Väth <martin at mvath.de>:
	- Support Google's protobuf output with --proto, currently untested.
	  Please report a bug if you have a use case for a modification or
	  (preferrably) extension of the proto, or it does not work.
	- Interpret /0 as no subslot. https://github.com/vaeth/eix/issues/70

*eix-0.33.11
	Martin Väth <martin at mvath.de>:
	- Bugfix: Fix typo in --with-portdir-default
	- Bugfix: Fix version for meson
	- Remove those sanitizers which cause linking problems on my systems

*eix-0.33.10
	Martin Väth <martin at mvath.de>:
	- Add --with-portdir-default with default /var/db/repos/gentoo,
	  replacing the previously hardcoded fallback /usr/portage,
	  see https://github.com/vaeth/eix/issues/69

*eix-0.33.9
	Martin Väth <martin at mvath.de>:
	- Support --longopt=parameter options
	- Introduce --color {never,always,auto} for overriding, see
	  https://github.com/vaeth/eix/issues/67
	- Remove -m*=thunk due to https://github.com/vaeth/eix/issues/64.
	  In gcc-9, this collides with -fcf-protection=full anyway.

*eix-0.33.8
	Martin Väth <martin at mvath.de>:
	- Output errors produced when reading repos.conf, see
	  https://github.com/vaeth/eix/issues/60
	- Add some missing NOEXCEPT
	- meson: add flags immediately to detect collisions
	- Adapt to gcc-9: Remove obsolete -mmpx -fcheck-pointer-bounds -Wchkp
	- Adapt to gcc-9: Prefer -fcf-protection=full over
	  colliding -mindirect-branch=thunk -mfunction-return=thunk

	Jan Ziak <0xe2.0x9a.0x9b at gmail.com>:
	- Improve performance of StringHash by using an unordered map

	Marco Leogrande <dark.knight.ita at gmail.com>:
	- Manpage typo fix

	Dmitriy Demura <dmitriy at demura.info>:
	- Russian translation fix

*eix-0.33.7
	Martin Väth <martin at mvath.de>:
	- Support relative pathnames in make.conf, see
	  https://github.com/vaeth/eix/issues/57
	- Update sqlite links, see https://github.com/vaeth/eix/issues/58
