@@ -1,5 +1,5 @@
 project('eix', 'cpp',
-	version : '0.34.0',
+	version : '0.34.1',
 	license : 'GPLv2',
 	default_options : [
 		'prefix=/usr',
